Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113833

Fix orthographic camera setup for volumes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.6
    • Graphs: 3D
    • None
    • b8e3d6bf1 (dev), 98e849d5f (6.6)

    Description

      Orthographic camera is setup the wrong way and using orthographic camera with volumes causes distortions

      Attachments

        For Gerrit Dashboard: QTBUG-113833
        # Subject Branch Project Status CR V

        Activity

          People

            tuliniemi Jere Tuliniemi
            tuliniemi Jere Tuliniemi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes