Fix orthographic camera setup for volumes

Task-number: QTBUG-113833
Pick-to: 6.6
Change-Id: I2b1d3434b3d26e620d0e7015678691f675da3c95
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>